mouse-click-bubble.md

--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -9,7 +9,9 @@
       	</div>
     </div>
   </div>
+  <script src="/mouse-click-bubble.js"></script>
   <script>
+	new MouseBubble();
 	(function(){
 		var bp = document.createElement('script');
 		var curProtocol = window.location.protocol.split(':')[0];
