--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -37,4 +37,5 @@
 	  s.parentNode.insertBefore(hm, s);
 	})();
   </script>
+  <script type="text/javascript" src="http://tajs.qq.com/stats?sId=65964197" charset="UTF-8"></script>
 </footer>
