[fix]: 腾讯统计脚本协议更改

--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -32,10 +32,10 @@
 	var _hmt = _hmt || [];
 	(function() {
 	  var hm = document.createElement("script");
-	  hm.src = "https://hm.baidu.com/hm.js?1af38511aedf67e25b24dee8934e388e";
+	  hm.src = "//hm.baidu.com/hm.js?1af38511aedf67e25b24dee8934e388e";
 	  var s = document.getElementsByTagName("script")[0]; 
 	  s.parentNode.insertBefore(hm, s);
 	})();
   </script>
-  <script type="text/javascript" src="http://tajs.qq.com/stats?sId=65964197" charset="UTF-8"></script>
+  <script type="text/javascript" src="//tajs.qq.com/stats?sId=65964197" charset="UTF-8"></script>
 </footer>
