添加友盟统计

--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -10,6 +10,7 @@
     </div>
   </div>
   <script src="/mouse-click-bubble.js"></script>
+  <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278994749&web_id=1278994749"></script>
   <script>
 	if(navigator.userAgent.indexOf('Mobile')===-1){
 		new MouseBubble();
